# copcon

./: .copconignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/setup-ci/: action.yml
.github/workflows/: ci-tests.yml  deploy-docs.yml  publish-pypi.yml  publish.yml  python-ci.yml  static.yml
copcon/: __init__.py  cli.py  exceptions.py  main.py  messages.py
copcon/core/: .copconignore  __init__.py  autodiscover.py  clipboard.py  file_filter.py  file_reader.py  file_tree.py  report.py
copcon/core/data/: __init__.py
copcon/utils/: __init__.py  logger.py
docs/: conf.py  index.rst
docs/_build/: genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/source/: clipboard.doctree  core.doctree  exceptions.doctree  file_filter.doctree  file_reader.doctree  file_tree.doctree  modules.doctree  report.doctree
docs/_build/_sources/source/: cli.rst.txt  exceptions.rst.txt  file_filter.rst.txt  file_reader.rst.txt  file_tree.rst.txt  modules.rst.txt
docs/_build/doctrees/: environment.pickle  modules.doctree
docs/_build/doctrees/source/: cli.doctree  copcon.core.doctree  copcon.doctree  copcon.utils.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/_build/html/source/: cli.html  (+5 more)
docs/_build/source/: cli.html  clipboard.html  core.html  exceptions.html  file_filter.html  file_reader.html  file_tree.html  modules.html  report.html
docs/source/: getting_started.rst  messages.rst
docs/source/core/: autodiscover.rst  index.rst
docs/source/utils/: index.rst
test_dir/subdir/: file2.txt
tests/: conftest.py  test_cli.py  test_cli_autodiscover.py  test_clipboard.py  test_file_filter.py  test_file_filter_targets.py  test_file_reader.py  test_file_tree.py  test_git_diff.py  test_main.py  test_messages.py  test_report_formatter.py
(+30 files in other folders)
