[tool.poetry]
name = "copcon"
version = "0.3.0"
description = ""
authors = ["Kasper Junge <kasperjuunge@gmail.com>"]
readme = "README.md"

include = [
    "copcon/core/.copconignore",
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pywin32 = {version = "^308", platform = "win32"}
pathspec = "^0.12.1"
pyperclip = "^1.8.2"  

[tool.poetry.scripts]
copcon = "copcon:copcon_app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
