[project]
name = "copcon"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Kasper Junge", email = "kasperjuunge@gmail.com" },
]
dependencies = [
    "typer>=0.12.3,<1.0.0",
    "pathspec>=0.12.1,<1.0.0",
    "pyperclip>=1.8.2,<2.0.0",
    'pywin32>=308,<309; platform_system == "Windows"',
]

include = [
    "copcon/core/.copconignore",
]

[project.scripts]
copcon = "copcon:copcon_app"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
