[project]
name = "copcon"
version = "0.3.11"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Kasper Junge", email = "kasperjuunge@gmail.com" },
]
dependencies = [
    "typer>=0.12.3,<1.0.0",
    "pathspec>=0.12.1,<1.0.0",
    "pyperclip>=1.8.2,<2.0.0",
    'pywin32>=308,<309; platform_system == "Windows"',
    "tiktoken>=0.8.0",
]

include = [
    "copcon/core/.copconignore",
]

[project.scripts]
copcon = "copcon:copcon_app"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.2",
]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
